refactor: modify client message listener to leverage virtual threads (also update client to java21)